# Modelling-week

./: README.md
Codes Fortran/: README.md  Simulation_electricField_enfonction_de_theta_1.f90
code2/: NoFarField_plot.cpp  README.md
code3/: CMakeCache.txt  CMakeLists.txt  ElectricFieldSim  ElectricFieldSimold  Makefile  README.md  cmake_install.cmake  main.cpp  plot.gnu
code4/: ElectricFieldSim  README.md  Simulation.cpp  cartesian_plot.gnu
code5/: ElectricField_PhaseShift.cpp  README.md
code6/: README.md  gain.cpp
